# robotic_note

./: README.md
ai_note/dl_note/python_cv/: bn.py  kmeans.py
ai_note/dl_note/pytorch_tutorial/: 02_quickstart_tutorial.ipynb
ai_note/dl_note/pytorch_tutorial/.ipynb_checkpoints/: 04_data_tutorial-checkpoint.ipynb  06_buildmodel_tutorial-checkpoint.ipynb
ai_note/rl_iml_sim_note/00_rl_note/: RL_note.md
ai_note/rl_iml_sim_note/01_hands_on_rl/.ipynb_checkpoints/: 第02章-多臂老虎机问题-checkpoint.ipynb
ai_note/rl_iml_sim_note/01_hands_on_rl/html/: 01_初探强化学习.mhtml  03_马尔可夫决策过程.mhtml  05_时序差分算法.mhtml  06_Dyna-Q算法.mhtml  07_DQN 算法.mhtml  08_DQN改进算法.mhtml
ai_note/rl_iml_sim_note/01_hands_on_rl/html/hands_on_rl_note/: hands_on_rl_note.md
ai_note/rl_iml_sim_note/01_hands_on_rl/jupyter_code/: rl_utils.py  第05章-时序差分算法.ipynb  第07章-DQN算法.ipynb
ai_note/rl_iml_sim_note/hands_on_rl/html/: 02_多臂老虎机.mhtml  04_动态规划算法.mhtml
ai_note/rl_iml_sim_note/hands_on_rl/jupyter_code/: 第04章-动态规划算法.ipynb
ai_note/rl_iml_sim_note/rl_note/: RL_note.md
code_note/cpp_note/: 03_leetcode_note.md
code_note/docker_note/: docker_note.md
code_note/mcu_note/port_note/: 通信接口笔记.md
code_note/net_note/ComputerNetWorkTopDown_note/: ComputerNetWorkTopDownNote.md
cpp_note/: 00_cpp_basic_note.md  01_cpp_stl_note.md  02_cpp_algorithm_datastructure_note.md
cpprobotics/: .gitignore  README.md
cpprobotics/modules/ArmNavigation/: CMakeLists.txt
cpprobotics/modules/ArmNavigation/NJointArmToPointControl/: NLinkArm.cpp  n_joint_arm_to_point_control.cpp
cpprobotics/modules/ArmNavigation/NLinkArm3d/: CMakeLists.txt  NLinkArm3d.hpp  random_forward_kinematics_3d.cpp  random_inverse_kinematics_3d.cpp
cpprobotics/modules/ArmNavigation/RRTStarSevenJointArmControl/: CMakeLists.txt  NLinkArm3d.hpp
cpprobotics/modules/ArmNavigation/TwoJointArmToPointControl/: CMakeLists.txt  two_joint_arm_to_point_control.cpp
cpprobotics/modules/Control/DiffRobotVelSteerPID/: CMakeLists.txt  main.cpp
cpprobotics/modules/Control/LQRSteerControl/: lqr_steer_control.cpp
cpprobotics/modules/Control/PP/: CMakeLists.txt
cpprobotics/modules/Control/RearWheelFeedback/: KinematicModel.cpp  MyReferencePath.cpp  RearWheelFeedback.cpp  RearWheelFeedbackControl.cpp
cpprobotics/modules/Control/Stanley/: CMakeLists.txt  stanley.cpp
cpprobotics/modules/Localization/HistogramFilter/: CMakeLists.txt
cpprobotics/modules/Localization/ParticleFilter/: CMakeLists.txt
cpprobotics/modules/PathPlanning/BreadthFirstSearch/: BreadthFirstSearch.cpp  CMakeLists.txt
cpprobotics/modules/PathPlanning/CubicSpline/: CMakeLists.txt  cubic_spline.cpp
cpprobotics/modules/PathPlanning/DWA/: dwa.cpp
cpprobotics/modules/PathPlanning/DepthFirstSearch/: CMakeLists.txt
cpprobotics/modules/PathPlanning/Dijkstra/: CMakeLists.txt
cpprobotics/modules/PathPlanning/DubinsPath/: Dubins.cpp  main.cpp
cpprobotics/modules/PathPlanning/FrenetOptimalTrajectory/: frenet_optimal_trajectory.cpp  quintic_polynomial.h
cpprobotics/modules/include/: DiffKinematicModel.h
deep_learning_note/pytorch_tutorial/: 03_tensorqs_tutorial.ipynb  05_transforms_tutorial.ipynb
deep_learning_note/pytorch_tutorial/.ipynb_checkpoints/: 02_quickstart_tutorial-checkpoint.ipynb  05_transforms_tutorial-checkpoint.ipynb
dl_note/: pytorch_note.md
dl_note/pytorch_tutorial/: 04_data_tutorial.ipynb
dl_note/pytorch_tutorial/.ipynb_checkpoints/: 03_tensorqs_tutorial-checkpoint.ipynb
git_note/: git_tricks.md
motor_note/: electricity_note.md  motor_note.md
rl_iml_sim_note/hands_on_rl/html/: 01_初探强化学习.html
rl_iml_sim_note/hands_on_rl/html/hands_on_rl_note/: hands_on_rl_note.md
rl_iml_sim_note/hands_on_rl/jupyter_code/: 第02章-多臂老虎机问题.ipynb
rl_iml_sim_note/hands_on_rl/jupyter_code/.ipynb_checkpoints/: 第03章-马尔可夫决策过程-checkpoint.ipynb
rl_iml_sim_note/rl_note/: RL_note_cheatsheet.md
rl_iml_sim_note/simulation_note/: isaac_gym_note.md  simulation.md
robotic_note/cpprobotics/: .clang-format  CMakeLists.txt
robotic_note/cpprobotics/modules/ArmNavigation/: README.md
robotic_note/cpprobotics/modules/ArmNavigation/ArmObstacleNavigation/: CMakeLists.txt  arm_obstacle_navigation.cpp
robotic_note/cpprobotics/modules/ArmNavigation/NJointArmToPointControl/: CMakeLists.txt  NLinkArm.h
robotic_note/cpprobotics/modules/ArmNavigation/RRTStarSevenJointArmControl/: rrt_star_seven_joint_arm_control.cpp
robotic_note/cpprobotics/modules/Control/: CMakeLists.txt
robotic_note/cpprobotics/modules/Control/DiffRobotVelSteerPID/: PIDController.cpp  PIDController.h
robotic_note/cpprobotics/modules/Control/DifferentialRobotPID/: CMakeLists.txt  main.cpp
robotic_note/cpprobotics/modules/Control/DifferentialRobotPID/include/: controller.h
robotic_note/cpprobotics/modules/Control/LQRSteerControl/: CMakeLists.txt
robotic_note/cpprobotics/modules/Control/PP/: pure_pursuit.cpp
robotic_note/cpprobotics/modules/Control/RearWheelFeedback/: CMakeLists.txt  KinematicModel.h  MyReferencePath.h  RearWheelFeedback.h
robotic_note/cpprobotics/modules/Localization/: CMakeLists.txt
robotic_note/cpprobotics/modules/Localization/ExtendedKalmanFilter/: CMakeLists.txt  extended_kalman_filter.cpp
robotic_note/cpprobotics/modules/Localization/ParticleFilter/: simulator.cpp
robotic_note/cpprobotics/modules/PathPlanning/: CMakeLists.txt
robotic_note/cpprobotics/modules/PathPlanning/A_star/: CMakeLists.txt  a_star.cpp
robotic_note/cpprobotics/modules/PathPlanning/DWA/: CMakeLists.txt
robotic_note/cpprobotics/modules/PathPlanning/DepthFirstSearch/: DepthFirstSearch.cpp
robotic_note/cpprobotics/modules/PathPlanning/Dijkstra/: dijkstra.cpp
robotic_note/cpprobotics/modules/PathPlanning/DubinsPath/: CMakeLists.txt
robotic_note/cpprobotics/modules/PathPlanning/FrenetOptimalTrajectory/: CMakeLists.txt  frenet_optimal_trajectory.h
robotic_note/cpprobotics/modules/include/: cpprobotics_types.h  matplotlibcpp.h  spline.h
robotic_note/robot_arm_note/: robot_arm_note.html  robot_arm_note.md
robotic_note/ros_note/: ros_note.md
ros_note/: ros_note.md
vscode_note/: vscode_tricks.md
(+8 files in other folders)
